[package]
name = "image_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
nannou = "0.18.0"
nannou_conrod = "*"
rand = "0.8.5"

[patch.crates-io]
nannou = {path = "../../nannou/nannou"}